# librats

./: .clang-format  .gitignore  CMakeLists.txt  MAINTAINERS  Makefile  README.md
.github/workflows/: manually_compilation_testing_image.yml  pr_basic_compilation_check.yml
.github/workflows/docker/: Dockerfile-compilation-testing-anolis8.4  Dockerfile-compilation-testing-anolis8.6  Dockerfile-compilation-testing-ubuntu20.04
api/: librats_cleanup.c  librats_collect_evidence.c  librats_get_attestation_certificate.c  librats_init.c  librats_verify_attestation_certificate.c  librats_verify_evidence.c
attesters/: CMakeLists.txt
attesters/api/: rats_attester_register.c
attesters/csv/: CMakeLists.txt  cleanup.c  collect_evidence.c  csv_utils.c  init.c  main.c  pre_init.c
attesters/internal/: rats_attester.c  rats_attester_load_all.c  rats_attester_load_single.c  rats_attester_post_init.c  rats_attester_select.c
attesters/nullattester/: CMakeLists.txt  cleanup.c  collect_endorsements.c  collect_evidence.c  init.c  main.c  pre_init.c
attesters/sev/: CMakeLists.txt  cleanup.c  collect_evidence.c  init.c  main.c  pre_init.c  sev.h
attesters/sev-snp/: CMakeLists.txt  cleanup.c  collect_evidence.c  init.c  main.c  pre_init.c  sev_snp.h  utils.c  utils.h
attesters/sgx-ecdsa/: CMakeLists.txt  cleanup.c  collect_endorsements.c  collect_evidence.c  init.c  main.c  pre_init.c  sgx_ecdsa.h
attesters/sgx-la/: CMakeLists.txt  cleanup.c  collect_evidence.c  init.c  main.c  pre_init.c
attesters/tdx-ecdsa/: CMakeLists.txt  cleanup.c  collect_endorsements.c  collect_evidence.c  init.c  main.c  pre_init.c
cmake/: CMakeUninstall.cmake.in  CompilerOptions.cmake  CustomInstallDirs.cmake  Emscripten.cmake  FindLibRats.cmake  FindSGX.cmake  FindSGXSSL.cmake  LibCBOR.cmake  SGXCommon.cmake  SGXSSL.cmake
core/: base64.c  cJSON.c  cert.c  claim.c  cpu.c  dice.c  endorsement.c  evidence.c  rats_common.c  rats_init.c
crypto_wrappers/api/: crypto_wrapper_register.c  crypto_wrapper_verify_certificate_extension.c
crypto_wrappers/internal/: crypto_wrapper_load_all.c  crypto_wrapper_post_init.c  crypto_wrapper_select.c
crypto_wrappers/nullcrypto/: CMakeLists.txt  cleanup.c  gen_cert.c  gen_hash.c  gen_privkey.c  get_pubkey_hash.c  init.c  main.c  pre_init.c  use_privkey.c  verify_cert.c
crypto_wrappers/openssl/: CMakeLists.txt  cleanup.c  gen_cert.c  gen_hash.c  gen_privkey.c  get_pubkey_hash.c  init.c  main.c  openssl.h  pre_init.c  use_privkey.c  verify_cert.c
docs/design/: endorsements-extension-for-rats-tls.md
include/edl/: rats.edl  rats_syscalls.edl  rats_syscalls.h  sgx_ecdsa.edl  sgx_la.edl
include/internal/: attester.h  base64.h  core.h  crypto_wrapper.h  dice.h  sgx.h  verifier.h
include/librats/: api.h  attester.h  cert.h  claim.h  conf.h  core.h  crypto_wrapper.h  csv.h  endorsement.h  err.h  evidence.h  hash.h  log.h  rats_syscalls.h  sgx.h  verifier.h
sample/: CMakeLists.txt  main.c
samples/: CMakeLists.txt
samples/cert-app/: CMakeLists.txt  README.md  common.c  main.c
samples/librats-client/: CMakeLists.txt  client.c
samples/librats-server/: CMakeLists.txt  server.c
samples/sgx-stub-enclave/: CMakeLists.txt  sgx_stub.edl  sgx_stub_ecall.c
tee/: CMakeLists.txt
tee/sgx/trust/: CMakeLists.txt  rats_syscalls.c  sgx_ecdsa_ecalls.c
tee/sgx/untrust/: CMakeLists.txt  rats_syscalls_ocall.c  sgx_ecdsa_ocall.c  sgx_la_ocall.c
verifiers/: CMakeLists.txt
verifiers/api/: rats_verifier_register.c
verifiers/csv/: CMakeLists.txt  cleanup.c  csv_utils.c  hygoncert.c  hygoncert.h  init.c  main.c  pre_init.c  verify_evidence.c
verifiers/internal/: rats_verifier.c  rats_verifier_load_all.c  rats_verifier_load_single.c  rats_verifier_post_init.c  rats_verifier_select.c
verifiers/nullverifier/: CMakeLists.txt  cleanup.c  init.c  main.c  pre_init.c  verify_evidence.c
verifiers/sev/: CMakeLists.txt  amdcert.c  cleanup.c  init.c  main.c  pre_init.c  sev_utils.c  sev_utils.h  sevcert.c  verify_evidence.c
verifiers/sev-snp/: CMakeLists.txt  cleanup.c  crypto.c  init.c  main.c  pre_init.c  utils.c  utils.h  verify_evidence.c  x509cert.c  x509cert.h
verifiers/sgx-ecdsa/: CMakeLists.txt  cleanup.c  init.c  main.c  pre_init.c  verify_evidence.c
verifiers/sgx-ecdsa-qve/: CMakeLists.txt  init.c  main.c
verifiers/sgx-la/: CMakeLists.txt  cleanup.c  init.c  main.c  pre_init.c  verify_evidence.c
verifiers/tdx-ecdsa/: CMakeLists.txt  cleanup.c  init.c  main.c  pre_init.c  tdx-ecdsa.h  verify_evidence.c
wasm/: pre_build.sh  wasm.cpp
wasm/dcap/: build.sh
wasm/dcap/patch/: 0001-Enable-generate-static-libraries-of-dcap_quoteverify.patch  0002-Add-Wasm-support.patch
wasm/emscripten/: README.md  pre_build.sh  sample.html  wasm.cpp
wasm/emscripten/dcap/: build.sh
wasm/emscripten/openssl/: build.sh
wasm/emsdk/: build.sh
wasm/openssl/: build.sh
wasm/wamr/: CMakeLists.txt  README.md  rats_api.c  rats_api.h
wasm/wamr/sample/: CMakeLists.txt  main.c
